# do_username

./: .gitignore  .rubocop.yml  LICENSE  README.md  do_username-0.0.2.gem  do_username.gemspec
.github/workflows/: javascript-ci.yml  main.yml  ruby-ci.yml
go/: PUBLISH.md  README.md  dousername.go  go.mod
javascript/: .eslintrc.json  .npmignore  PUBLISH.md  README.md  package-lock.json  package.json
javascript/__tests__/: do_username.test.js
javascript/lib/: constants.js  do_username.js  private_functions.js
javascript/spec/: do_username.test.js
lib/: do_username.rb
python/: PUBLISH.md  README.md  setup.py
python/do_username/: __init__.py  __main__.py  generate.py
python/do_username.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ruby/: PUBLISH.md  README.md  do_username.gemspec
ruby/spec/: do_username_spec.rb  spec_helper.rb
rust/: Cargo.toml  PUBLISH.md  README.md
rust/src/: lib.rs
spec/: do_username_spec.rb  spec_helper.rb
