[package]
name = "do_username"
version = "0.1.0"
license = "Apache-2.0"
description = "DigitalOcean Username Generator"
authors = ["ThatCopy <62877244+ThatCopy@users.noreply.github.com>", "DigialOcean, Matt Cowley <me@mattcowley.co.uk>"]
edition = "2018"
homepage = "https://github.com/MattIPv4/do_username/tree/master/rust#readme"
repository = "https://github.com/MattIPv4/do_username/"
readme = "README.md"

[dependencies]
rand = "0.7.3"
lazy_static = "1.0.1"
